<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPS Data</string>
    <string name="action_settings">Settings</string>
    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
    <string name="bearing_label">Bearing:</string>
    <string name="accuracy_label">Accuracy:</string>
    <string name="provider_label">Provider:</string>
    <string name="time_label">Update Period:</string>
    <string name="default_value">N/A</string>
    <string name="unit_meter"> m</string>
    <string name="unit_deg">&amp;deg;</string>
    <string name="unit_sec"> s</string>
    <string name="altitude_label">Altitude:</string>
    <string name="speed_label">Speed:</string>
    <string name="updates_label">Updates Received:</string>
    <string name="unit_meters_per_sec"> m/s</string>

</resources>
